--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Jayna's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/JaynaLeitze/resume/raw/main/JaynaLeitzeRes%20-%20V2.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/JaynaLeitze/resume/raw/main/JaynaLeitzeRes%20-%20Final.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
