--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Jayna's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/JaynaLeitze/resume/raw/main/JaynaLeitzeRes%20-%200526.pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/JaynaLeitze/resume/blob/c54d1ed7653a58fd996d4ba00f8afeb9a10fe472/JDLRes%2010.2023%20(1).pdf" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
